[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdbrpc"
dynamic = ["version"]
dependencies = ["cloudpickle>=0.0.0"]
requires-python = ">=3.10"
maintainers = [
    { name = "suoyuan", email = "s5n666@outlook.com" },
    { name = "Neo Xu", email = "neo.xu1990@gmail.com" }
]
description = "A Python RPC framework for controlling GDB remotely - enables programmatic debugging automation, remote command execution, and interactive CLI for any GDB-compatible debugger"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["gdb", "remote", "rpc", "debugger", "debugging", "automation", "NuttX", "embedded"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
package-dir = { "gdbrpc" = "gdbrpc" }

[tool.setuptools_scm]
write_to = "gdbrpc/_version.py"

[project.urls]
Homepage = "https://github.com/suoyuanG/gdbrpc"
Issues = "https://github.com/suoyuanG/gdbrpc/issues"
