[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdbrpc"
version = "0.0.1"
description = "gdb RPC for Debugging NuttX"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = ["cloudpickle>=0.0.0"]

[tool.setuptools]
package-dir = { "gdbrpc" = "." }

